Revert "bug: horizontal scrollbars when scrollbar-width not set"
This reverts commit 3dfc8d4d59d5da58cf40e8195e421151a757a7d8.

--- a/src/app/reset/index.scss
+++ b/src/app/reset/index.scss
@@ -1,10 +1,5 @@
 @use '../constants' as *;
 
-:root {
-  --scrollbar-width: calc(100vw - 100%);
-  --vw-ratio-16x9: calc(100% / 16 * 9);
-}
-
 html {
   overflow-x: hidden;
   font-size: 16px;
